ui - choiceeditor fixes